--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <label for="option">
       <input type="checkbox" id="option">
       <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-        <path d="M 10 10 L 90 90" style="stroke-dasharray: 100%, 150%; transition: stroke-dashoffset 0.2s ease-in-out 0s;" stroke="orange"></path>
-        <path d="M 90 10 L 10 90" style="stroke-dasharray: 100%, 150%; transition: stroke-dashoffset 0.2s ease-in-out 0.2s;" stroke="orange"></path>
+        <path class="check" d="M 25 55 C 25 100, 65 55, 85 10" fill="transparent" stroke="orange"></path>
+        <path class="border" d="M 0 0 L 100 0 L 100 100 L 0 100 L 0 0" fill="transparent" stroke="orange"></path>
       </svg>
     </label>
   </div>
