--- a/index.html
+++ b/index.html
@@ -7,13 +7,34 @@
 
 <body>
   <div class="custom-checkbox">
-    <label for="option">
-      <input type="checkbox" id="option">
+    <label>
+      <input type="checkbox">
       <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
         <path class="check" d="M 25 55 C 25 100, 65 55, 85 10" fill="transparent" stroke="orange"></path>
         <path class="border" d="M 0 0 L 100 0 L 100 100 L 0 100 L 0 0" fill="transparent" stroke="orange"></path>
       </svg>
     </label>
+  </div>
+
+  <div class="radio-buttons">
+    <div class="custom-radio">
+      <label>
+        <input type="radio" name="radio-option">
+        <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+          <circle class="outer-circle" cx="50" cy="50" r="40" stroke="orange" fill="transparent"></circle>
+          <line x1="50" y1="50" x2="50" y2="50" stroke="orange" class="inner-circle"></line>
+        </svg>
+      </label>
+    </div>
+    <div class="custom-radio">
+      <label>
+        <input type="radio" name="radio-option">
+        <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+          <circle class="outer-circle" cx="50" cy="50" r="40" stroke="orange" fill="transparent"></circle>
+          <line x1="50" y1="50" x2="50" y2="50" stroke="orange" class="inner-circle"></line>
+        </svg>
+      </label>
+    </div>
   </div>
 </body>
 
