Add color changes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <label>
       <input type="checkbox">
       <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-        <path class="check" d="M 25 55 C 25 100, 65 55, 85 10" fill="transparent" stroke="orange"></path>
-        <path class="border" d="M 0 0 L 100 0 L 100 100 L 0 100 L 0 0" fill="transparent" stroke="orange"></path>
+        <path class="check" d="M 25 55 C 25 100, 65 55, 85 10" fill="transparent"></path>
+        <path class="border" d="M 0 0 L 100 0 L 100 100 L 0 100 L 0 0" fill="transparent"></path>
       </svg>
     </label>
   </div>
@@ -21,8 +21,8 @@
       <label>
         <input type="radio" name="radio-option">
         <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-          <circle class="outer-circle" cx="50" cy="50" r="40" stroke="orange" fill="transparent"></circle>
-          <line x1="50" y1="50" x2="50" y2="50" stroke="orange" class="inner-circle"></line>
+          <circle class="outer-circle" cx="50" cy="50" r="40" fill="transparent"></circle>
+          <line x1="50" y1="50" x2="50" y2="50" class="inner-circle"></line>
         </svg>
       </label>
     </div>
@@ -30,8 +30,8 @@
       <label>
         <input type="radio" name="radio-option">
         <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-          <circle class="outer-circle" cx="50" cy="50" r="40" stroke="orange" fill="transparent"></circle>
-          <line x1="50" y1="50" x2="50" y2="50" stroke="orange" class="inner-circle"></line>
+          <circle class="outer-circle" cx="50" cy="50" r="40" fill="transparent"></circle>
+          <line x1="50" y1="50" x2="50" y2="50" class="inner-circle"></line>
         </svg>
       </label>
     </div>
