Add collapsable box

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 
 <body>
+  <h1>Custom Components</h1>
+
   <div class="custom-checkbox">
     <label>
       <input type="checkbox">
@@ -34,6 +36,17 @@
           <line x1="50" y1="50" x2="50" y2="50" class="inner-circle"></line>
         </svg>
       </label>
+    </div>
+  </div>
+
+  <h1>Collapsable Box</h1>
+  <div class="collapsable">
+    <input type="checkbox" id="collapsable">
+    <label for="collapsable" class="head">
+      Head
+    </label>
+    <div class="content">
+      Content
     </div>
   </div>
 </body>
