--- a/index.html
+++ b/index.html
@@ -49,6 +49,19 @@
       Content
     </div>
   </div>
+
+  <h1>Tab</h1>
+  <div class="tabs-radio">
+    <input type="radio" name="tab" id="tab1">
+    <input type="radio" name="tab" id="tab2">
+    <input type="radio" name="tab" id="tab3">
+    <div class="tabs">
+      <label for="tab1">A1</label>
+      <label for="tab2">A2</label>
+      <label for="tab3">A3</label>
+    </div>
+    <div class="content"></div>
+  </div>
 </body>
 
 </html>
