--- a/index.html
+++ b/index.html
@@ -56,11 +56,46 @@
     <input type="radio" name="tab" id="tab2">
     <input type="radio" name="tab" id="tab3">
     <div class="tabs">
-      <label for="tab1">A1</label>
-      <label for="tab2">A2</label>
-      <label for="tab3">A3</label>
+      <label for="tab1">Manifesto for Agile Software Development</label>
+      <label for="tab2">애자일 소프트웨어 개발 선언</label>
+      <label for="tab3">アジャイルソフトウェア開発宣言</label>
     </div>
-    <div class="content"></div>
+    <div class="contents">
+      <article id="tab1-content">
+        <p>We are uncovering better ways of developing<br>
+        software by doing it and helping others do it.<br>
+        Through this work we have come to value:<br></p>
+        <p><em>Individuals and interactions</em> over processes and tools<br>
+        <em>Working software</em> over comprehensive documentation<br>
+        <em>Customer collaboration</em> over contract negotiation<br>
+        <em>Responding to change</em> over following a plan</p>
+        <p>That is, while there is value in the items on<br>
+        the right, we value the items on the left more.</p>
+      </article>
+      <article id="tab2-content">
+        <p>우리는 소프트웨어를 개발하고, 또 다른 사람의 개발을<br>
+        도와주면서 소프트웨어 개발의 더 나은 방법들을 찾아가고<br>
+        있다. 이 작업을 통해 우리는 다음을 가치 있게 여기게 되었다:</p>
+        <p>공정과 도구보다 <em>개인과 상호작용</em>을<br>
+        포괄적인 문서보다 <em>작동하는 소프트웨어</em>를<br>
+        계약 협상보다 <em>고객과의 협력</em>을<br>
+        계획을 따르기보다 <em>변화에 대응하기</em>를</p>
+        <p>가치 있게 여긴다. 이 말은, 왼쪽에 있는 것들도 가치가 있지만,<br>
+        우리는 오른쪽에 있는 것들에 더 높은 가치를 둔다는 것이다.</p>
+      </article>
+      <article id="tab3-content">
+        <p>私たちは、ソフトウェア開発の実践<br>
+        あるいは実践を手助けをする活動を通じて、<br>
+        よりよい開発方法を見つけだそうとしている。<br>
+        この活動を通して、私たちは以下の価値に至った。</p>
+        <p>プロセスやツールよりも<em>個人と対話</em>を、<br>
+        包括的なドキュメントよりも<em>動くソフトウェア</em>を、<br>
+        契約交渉よりも<em>顧客との協調</em>を、<br>
+        計画に従うことよりも<em>変化への対応</em>を、</p>
+        <p>価値とする。すなわち、左記のことがらに価値があることを<br>
+        認めながらも、私たちは右記のことがらにより価値をおく。</p>
+      </article>
+    </div>
   </div>
 </body>
 
