Adjust layout, handle mobile browsers

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 
 <head>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, user-scalable=no">
 </head>
 
 <body>
   <header>
-    Assignment
+    ASSIGNMENT
   </header>
   <main>
     <section>
@@ -45,10 +47,10 @@
     </section>
 
     <section>
-      <h1>Collapsable Box</h1>
-      <div class="collapsable">
-        <input type="checkbox" id="collapsable">
-        <label for="collapsable" class="head">
+      <h1>Collapsible Box</h1>
+      <div class="collapsible">
+        <input type="checkbox" id="collapsible">
+        <label for="collapsible" class="head">
           Click me!
         </label>
         <article class="content">
